--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/content"
-    android:name="com.doplgangr.secrecy.Views.VaultsListFragment_"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+<com.doplgangr.secrecy.Views.DummyViews.NavDrawer.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-</fragment>
+    <RelativeLayout
+        android:id="@+id/content_frame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/left_drawer"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="start"
+        android:layout_marginEnd="@dimen/drawer_right_margin"
+        android:layout_marginRight="@dimen/drawer_right_margin"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/fake_banner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/bg_16_9" />
+
+        <com.doplgangr.secrecy.Views.DummyViews.NavDrawer.NavListView
+            android:id="@+id/left_drawer_list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@color/white" />
+    </LinearLayout>
+</com.doplgangr.secrecy.Views.DummyViews.NavDrawer.DrawerLayout>
