--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,25 @@
         android:layout_marginRight="@dimen/drawer_right_margin"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/fake_banner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:src="@drawable/bg_16_9" />
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/fake_banner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/bg_16_9" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/fake_banner"
+                android:layout_margin="@dimen/margin_from_edge"
+                android:text="@string/App__slogan"
+                android:textColor="@color/white" />
+        </RelativeLayout>
 
         <com.doplgangr.secrecy.Views.DummyViews.NavDrawer.NavListView
             android:id="@+id/left_drawer_list"
