--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.doplgangr.secrecy.Views.DummyViews.NavDrawer.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/content_frame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/primary"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/left_drawer"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="start"
-        android:layout_marginEnd="@dimen/drawer_right_margin"
-        android:layout_marginRight="@dimen/drawer_right_margin"
-        android:orientation="vertical">
+    <com.doplgangr.secrecy.Views.DummyViews.NavDrawer.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <RelativeLayout
-            android:layout_width="fill_parent"
+            android:id="@+id/content_frame"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/fake_banner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:src="@drawable/bg_16_9" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/fake_banner"
-                android:layout_margin="@dimen/margin_from_edge"
-                android:text="@string/App__slogan"
-                android:textColor="@color/white" />
         </RelativeLayout>
 
-        <com.doplgangr.secrecy.Views.DummyViews.NavDrawer.NavListView
-            android:id="@+id/left_drawer_list"
+        <LinearLayout
+            android:id="@+id/left_drawer"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:background="@color/white" />
-    </LinearLayout>
-</com.doplgangr.secrecy.Views.DummyViews.NavDrawer.DrawerLayout>
+            android:layout_gravity="start"
+            android:layout_marginEnd="@dimen/drawer_right_margin"
+            android:layout_marginRight="@dimen/drawer_right_margin"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/fake_banner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/bg_16_9" />
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/fake_banner"
+                    android:layout_margin="@dimen/margin_from_edge"
+                    android:text="@string/App__slogan"
+                    android:textColor="@color/white" />
+            </RelativeLayout>
+
+            <com.doplgangr.secrecy.Views.DummyViews.NavDrawer.NavListView
+                android:id="@+id/left_drawer_list"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:background="@color/white" />
+        </LinearLayout>
+    </com.doplgangr.secrecy.Views.DummyViews.NavDrawer.DrawerLayout>
+
+</LinearLayout>
