Styling dialogs accord Material specs

--- a/app/src/main/res/layout/new_credentials.xml
+++ b/app/src/main/res/layout/new_credentials.xml
@@ -22,27 +22,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/dialog_padding">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="bottom"
+        android:hint="@string/Vault__vault_name_hint"
+        android:minHeight="36dp" />
 
     <EditText
         android:id="@+id/newName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/Vault__vault_name_hint" />
+        android:inputType="text" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="bottom"
+        android:hint="@string/Vault__vault_password_hint"
+        android:minHeight="36dp" />
 
     <EditText
         android:id="@+id/stealth_keycode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/Vault__vault_password_hint"
         android:inputType="textPassword" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="bottom"
+        android:hint="@string/Vault__confirm_password_hint"
+        android:minHeight="36dp" />
 
     <EditText
         android:id="@+id/confirmPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/Vault__confirm_password_hint"
         android:inputType="textPassword" />
 </LinearLayout>
