--- a/app/src/main/res/layout/select_dialog_singlechoice.xml
+++ b/app/src/main/res/layout/select_dialog_singlechoice.xml
@@ -17,12 +17,14 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/dialog_padding"
+    android:layout_marginRight="@dimen/dialog_padding"
     android:checkMark="?android:attr/listChoiceIndicatorSingle"
     android:ellipsize="marquee"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
+    android:paddingEnd="7dp"
     android:paddingLeft="12dp"
     android:paddingRight="7dp"
     android:paddingStart="12dp"
-    android:paddingEnd="7dp"
     android:textAppearance="?android:attr/textAppearanceMedium" />
