Added select all button I used a existing icon for this. Should be replaced with a better one

--- a/app/src/main/res/menu/file_action.xml
+++ b/app/src/main/res/menu/file_action.xml
@@ -22,6 +22,12 @@
         android:title="@string/abc_shareactionprovider_share_with"
         app:showAsAction="always" />
     <item
+        android:id="@+id/action_select_all"
+        android:icon="@drawable/ic_list"
+        android:orderInCategory="2"
+        android:title="@string/action_select_all"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/action_delete"
         android:icon="@drawable/ic_action_discard"
         android:orderInCategory="5"
