--- a/app/src/main/res/menu/list_vault.xml
+++ b/app/src/main/res/menu/list_vault.xml
@@ -9,4 +9,9 @@
         android:orderInCategory="1"
         android:title="@string/action__add_vault"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_restore"
+        android:orderInCategory="99"
+        android:title="@string/action__restore_vault"
+        app:showAsAction="never" />
 </menu>
