--- a/app/src/main/res/values/strings_file_handling.xml
+++ b/app/src/main/res/values/strings_file_handling.xml
@@ -15,6 +15,7 @@
     <string name="Error__no_file_selected">No file is selected.</string>
     <string name="Files__add_successful">File successfully added</string>
     <string name="Files__add_successful_message">Would you like to delete the original file?</string>
+    <string name="Files__adding">Adding files</string>
     <string name="Error__already_decrypting_delete">Cannot delete decrypting files</string>
     <string name="Files__delete">Delete Files</string>
     <string name="Files__delete_message">Are you sure to delete the following file(s)? %s</string>
