--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -15,6 +15,16 @@
 
     </PreferenceCategory>
     <PreferenceCategory
+        android:key="performance"
+        android:title="@string/Settings__performance">
+        <ListPreference
+            android:key="image_size"
+            android:entries="@array/array_image_size_entries"
+            android:entryValues="@array/array_image_size_values"
+            android:title="@string/Settings_max_image_size"
+        />
+    </PreferenceCategory>
+    <PreferenceCategory
         android:key="vault"
         android:title="@string/Settings__vault_management">
 
